--- a/12 (03) Cloud-Based Image Processing/1 Cloud-Based Image Processing.ipynb
+++ b/12 (03) Cloud-Based Image Processing/1 Cloud-Based Image Processing.ipynb
@@ -379,13 +379,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: clarifai-grpc in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (9.8.3)\n",
+      "Requirement already satisfied: grpcio>=1.44.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from clarifai-grpc) (1.58.0)\n",
+      "Requirement already satisfied: protobuf>=3.20.3 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from clarifai-grpc) (4.24.3)\n",
+      "Requirement already satisfied: googleapis-common-protos>=1.53.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from clarifai-grpc) (1.60.0)\n",
+      "Requirement already satisfied: requests>=2.25.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from clarifai-grpc) (2.29.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from requests>=2.25.1->clarifai-grpc) (3.1.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from requests>=2.25.1->clarifai-grpc) (3.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from requests>=2.25.1->clarifai-grpc) (1.26.13)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from requests>=2.25.1->clarifai-grpc) (2023.7.22)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "pip install clarifai-grpc"
    ]
@@ -403,13 +420,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pip in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (24.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "pip install --upgrade pip"
    ]
@@ -440,13 +466,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: setuptools in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (75.1.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "pip install --upgrade setuptools"
    ]
@@ -475,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -513,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -538,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -565,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -589,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -625,13 +660,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "status {\n",
+      "  code: SUCCESS\n",
+      "  description: \"Ok\"\n",
+      "  req_id: \"0abd9f0a101c4f44b9389537cb868373\"\n",
+      "}\n",
+      "outputs {\n",
+      "  id: \"61241a3023f04c6f92f5cf5791035653\"\n",
+      "  status {\n",
+      "    code: SUCCESS\n",
+      "    description: \"Ok\"\n",
+      "  }\n",
+      "  created_at {\n",
+      "    seconds: 1728575111\n",
+      "    nanos: 446117207\n",
+      "  }\n",
+      "  model {\n",
+      "    id: \"general-image-recognition\"\n",
+      "    name: \"Image Recognition\"\n",
+      "    created_at {\n",
+      "      seconds: 1457543499\n",
+      "      nanos: 608845000\n",
+      "    }\n",
+      "    modified_at {\n",
+      "      seconds: 1702889675\n",
+      "      nanos: 172716000\n",
+      "    }\n",
+      "    app_id: \"main\"\n",
+      "    model_version {\n",
+      "      id: \"aa7f35c01e0642fda5cf400f543e7c40\"\n",
+      "      created_at {\n",
+      "        seconds: 1520370624\n",
+      "        nanos: 454834000\n",
+      "      }\n",
+      "      status {\n",
+      "        code: MODEL_TRAINED\n",
+      "        description: \"Model is trained and ready for deployment\"\n",
+      "      }\n",
+      "      visibility {\n",
+      "        gettable: PUBLIC\n",
+      "      }\n",
+      "      app_id: \"main\"\n",
+      "      user_id: \"clarifai\"\n",
+      "      metadata {\n",
+      "      }\n",
+      "    }\n",
+      "    user_id: \"clarifai\"\n",
+      "    model_type_id: \"visual-classifier\"\n",
+      "    visibility {\n",
+      "      gettable: PUBLIC\n",
+      "    }\n",
+      "    workflow_recommended {\n",
+      "    }\n",
+      "  }\n",
+      "  input {\n",
+      "    id: \"5567a36d909c4585ab37db582b52953f\"\n",
+      "    data {\n",
+      "      image {\n",
+      "        url: \"https://samples.clarifai.com/metro-north.jpg\"\n",
+      "        base64: \"true\"\n",
+      "      }\n",
+      "    }\n",
+      "  }\n",
+      "  data {\n",
+      "    concepts {\n",
+      "      id: \"ai_HLmqFqBf\"\n",
+      "      name: \"train\"\n",
+      "      value: 0.999605954\n",
+      "      app_id: \"main\"\n",
+      "    }\n",
+      "    concepts {\n",
+      "      id: \"ai_fvlBqXZR\"\n",
+      "      name: \"railway\"\n",
+      "      value: 0.999299169\n",
+      "      app_id: \"main\"\n",
+      "    }\n",
+      "    concepts {\n",
+      "      id: \"ai_SHNDcmJ3\"\n",
+      "      name: \"subway system\"\n",
+      "      value: 0.998258173\n",
+      "      app_id: \"main\"\n",
+      "    }\n",
+      "    concepts {\n",
+      "      id: \"ai_6kTjGfF6\"\n",
+      "      name: \"station\"\n",
+      "      value: 0.998013616\n",
+      "      app_id: \"main\"\n",
+      "    }\n",
+      "    concepts {\n",
+      "      id: \"ai_RRXLczch\"\n",
+      "      name: \"locomotive\"\n",
+      "      value: 0.997267723\n",
+      "      app_id: \"main\"\n",
+      "    }\n",
+      "    concepts {\n",
+      "      id: \"ai_Xxjc3MhT\"\n",
+      "      name: \"transportation system\"\n",
+      "      value: 0.996977\n",
+      "      app_id: \"main\"\n",
+      "    }\n",
+      "    concepts {\n",
+      "      id: \"ai_VRmbGVWh\"\n",
+      "      name: \"travel\"\n",
+      "      value: 0.988971531\n",
+      "      app_id: \"main\"\n",
+      "    }\n",
+      "    concepts {\n",
+      "      id: \"ai_jlb9q33b\"\n",
+      "      name: \"commuter\"\n",
+      "      value: 0.98088938\n",
+      "      app_id: \"main\"\n",
+      "    }\n",
+      "    concepts {\n",
+      "      id: \"ai_2gkfMDsM\"\n",
+      "      name: \"platform\"\n",
+      "      value: 0.980667114\n",
+      "      app_id: \"main\"\n",
+      "    }\n",
+      "    concepts {\n",
+      "      id: \"ai_n9vjC1jB\"\n",
+      "      name: \"light\"\n",
+      "      value: 0.974264681\n",
+      "      app_id: \"main\"\n",
+      "    }\n",
+      "    concepts {\n",
+      "      id: \"ai_sQQj52KZ\"\n",
+      "      name: \"train station\"\n",
+      "      value: 0.968872666\n",
+      "      app_id: \"main\"\n",
+      "    }\n",
+      "    concepts {\n",
+      "      id: \"ai_l4WckcJN\"\n",
+      "      name: \"blur\"\n",
+      "      value: 0.967257917\n",
+      "      app_id: \"main\"\n",
+      "    }\n",
+      "    concepts {\n",
+      "      id: \"ai_WBQfVV0p\"\n",
+      "      name: \"city\"\n",
+      "      value: 0.961560965\n",
+      "      app_id: \"main\"\n",
+      "    }\n",
+      "    concepts {\n",
+      "      id: \"ai_TZ3C79C6\"\n",
+      "      name: \"road\"\n",
+      "      value: 0.961418033\n",
+      "      app_id: \"main\"\n",
+      "    }\n",
+      "    concepts {\n",
+      "      id: \"ai_CpFBRWzD\"\n",
+      "      name: \"urban\"\n",
+      "      value: 0.960432768\n",
+      "      app_id: \"main\"\n",
+      "    }\n",
+      "    concepts {\n",
+      "      id: \"ai_tr0MBp64\"\n",
+      "      name: \"traffic\"\n",
+      "      value: 0.959912598\n",
+      "      app_id: \"main\"\n",
+      "    }\n",
+      "    concepts {\n",
+      "      id: \"ai_GjVpxXrs\"\n",
+      "      name: \"street\"\n",
+      "      value: 0.94766\n",
+      "      app_id: \"main\"\n",
+      "    }\n",
+      "    concepts {\n",
+      "      id: \"ai_mcSHVRfS\"\n",
+      "      name: \"public\"\n",
+      "      value: 0.934327364\n",
+      "      app_id: \"main\"\n",
+      "    }\n",
+      "    concepts {\n",
+      "      id: \"ai_J6d1kV8t\"\n",
+      "      name: \"tramway\"\n",
+      "      value: 0.932171881\n",
+      "      app_id: \"main\"\n",
+      "    }\n",
+      "    concepts {\n",
+      "      id: \"ai_6lhccv44\"\n",
+      "      name: \"business\"\n",
+      "      value: 0.929391503\n",
+      "      app_id: \"main\"\n",
+      "    }\n",
+      "  }\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(response)"
    ]
@@ -649,13 +877,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                train: 1.00\n",
+      "              railway: 1.00\n",
+      "        subway system: 1.00\n",
+      "              station: 1.00\n",
+      "           locomotive: 1.00\n",
+      "transportation system: 1.00\n",
+      "               travel: 0.99\n",
+      "             commuter: 0.98\n",
+      "             platform: 0.98\n",
+      "                light: 0.97\n",
+      "        train station: 0.97\n",
+      "                 blur: 0.97\n",
+      "                 city: 0.96\n",
+      "                 road: 0.96\n",
+      "                urban: 0.96\n",
+      "              traffic: 0.96\n",
+      "               street: 0.95\n",
+      "               public: 0.93\n",
+      "              tramway: 0.93\n",
+      "             business: 0.93\n"
+     ]
+    }
+   ],
    "source": [
     "for concept in response.outputs[0].data.concepts:\n",
     "    print('%21s: %.2f' % (concept.name, concept.value))"
@@ -674,13 +929,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train railway subway system station locomotive transportation system travel commuter platform light train station blur city road urban traffic street public tramway business "
+     ]
+    }
+   ],
    "source": [
     "[print(concept.name, end=' ') for concept in response.outputs[0].data.concepts];"
    ]
@@ -710,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -735,13 +998,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fashion woman veil portrait lid girl model elegant retro sexy people glamour one classic wear vintage summer hair beautiful style "
+     ]
+    }
+   ],
    "source": [
     "[print(concept.name, end=' ') for concept in response.outputs[0].data.concepts];"
    ]
@@ -770,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -793,26 +1064,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "status {\n",
+      "  code: INPUT_DOWNLOAD_FAILED\n",
+      "  description: \"Download failed or we could not process it. Check URL or bytes you send in the request. Some URLs restrict downloads. Try uploading rather than using URLs.\"\n",
+      "  details: \"Download of URL: http://foo.bar failed with error: Get \\\"http://foo.bar\\\": lookup foo.bar on 172.20.0.10:53: no such host\"\n",
+      "  req_id: \"ecbbe4a90f254a0196a21cb232fa119b\"\n",
+      "}\n",
+      "outputs {\n",
+      "  id: \"dfa001742c314fe1bcea97d4277a3db2\"\n",
+      "  status {\n",
+      "    code: INPUT_DOWNLOAD_FAILED\n",
+      "    description: \"Download failed or we could not process it. Check URL or bytes you send in the request. Some URLs restrict downloads. Try uploading rather than using URLs.\"\n",
+      "    details: \"Download of URL: http://foo.bar failed with error: Get \\\"http://foo.bar\\\": lookup foo.bar on 172.20.0.10:53: no such host\"\n",
+      "    req_id: \"ecbbe4a90f254a0196a21cb232fa119b\"\n",
+      "  }\n",
+      "  created_at {\n",
+      "    seconds: 1728575269\n",
+      "    nanos: 751516682\n",
+      "  }\n",
+      "  model {\n",
+      "    id: \"general-image-recognition\"\n",
+      "    name: \"Image Recognition\"\n",
+      "    created_at {\n",
+      "      seconds: 1457543499\n",
+      "      nanos: 608845000\n",
+      "    }\n",
+      "    modified_at {\n",
+      "      seconds: 1702889675\n",
+      "      nanos: 172716000\n",
+      "    }\n",
+      "    app_id: \"main\"\n",
+      "    model_version {\n",
+      "      id: \"aa7f35c01e0642fda5cf400f543e7c40\"\n",
+      "      created_at {\n",
+      "        seconds: 1520370624\n",
+      "        nanos: 454834000\n",
+      "      }\n",
+      "      status {\n",
+      "        code: MODEL_TRAINED\n",
+      "        description: \"Model is trained and ready for deployment\"\n",
+      "      }\n",
+      "      visibility {\n",
+      "        gettable: PUBLIC\n",
+      "      }\n",
+      "      app_id: \"main\"\n",
+      "      user_id: \"clarifai\"\n",
+      "      metadata {\n",
+      "      }\n",
+      "    }\n",
+      "    user_id: \"clarifai\"\n",
+      "    model_type_id: \"visual-classifier\"\n",
+      "    visibility {\n",
+      "      gettable: PUBLIC\n",
+      "    }\n",
+      "    workflow_recommended {\n",
+      "    }\n",
+      "  }\n",
+      "  input {\n",
+      "    id: \"5aac50dfc6e64b05bb2fd699e8849260\"\n",
+      "    data {\n",
+      "      image {\n",
+      "        url: \"http://foo.bar\"\n",
+      "      }\n",
+      "    }\n",
+      "  }\n",
+      "  data {\n",
+      "  }\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(response)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There was an error with your request!\n",
+      "\tCode: 30002\n",
+      "\tDescription: Download failed or we could not process it. Check URL or bytes you send in the request. Some URLs restrict downloads. Try uploading rather than using URLs.\n",
+      "\tDetails: Download of URL: http://foo.bar failed with error: Get \"http://foo.bar\": lookup foo.bar on 172.20.0.10:53: no such host\n"
+     ]
+    },
+    {
+     "ename": "Exception",
+     "evalue": "Request failed, status code: 30002",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124mDescription: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(response\u001b[38;5;241m.\u001b[39moutputs[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mstatus\u001b[38;5;241m.\u001b[39mdescription))\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124mDetails: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(response\u001b[38;5;241m.\u001b[39moutputs[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mstatus\u001b[38;5;241m.\u001b[39mdetails))\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRequest failed, status code: \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(response\u001b[38;5;241m.\u001b[39mstatus\u001b[38;5;241m.\u001b[39mcode))\n",
+      "\u001b[0;31mException\u001b[0m: Request failed, status code: 30002"
+     ]
+    }
+   ],
    "source": [
     "if response.status.code != status_code_pb2.SUCCESS:\n",
     "    print(\"There was an error with your request!\")\n",
