Add scripts and notebooks for video compression experiment
Introduced a shell script to launch Jupyter Notebook with a specific configuration and added a comprehensive notebook for the video signal compression experiment. The notebook includes detailed theoretical explanations, tasks, and setup instructions for performing video compression evaluations.

--- a/03 Video Signal Compression/video_compression.ipynb
+++ b/03 Video Signal Compression/video_compression.ipynb
@@ -180,7 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install --upgrade ipywidgets ffmpeg opencv-python"
+    "pip install --upgrade ipywidgets ffmpeg-python opencv-python"
    ]
   },
   {
