--- a/04 Audio Signal Compression/audio_comp.ipynb
+++ b/04 Audio Signal Compression/audio_comp.ipynb
@@ -100,10 +100,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "649a5db3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ffcff6a8ac904253a07365f998b888b2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Tab(children=(VBox(children=(HBox(children=(FileUpload(value=(), description='Upload Source', tooltip='Upload …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%matplotlib widget\n",
     "from compaud import run_gui\n",
