--- a/04 Audio Signal Compression/audio_comp.ipynb
+++ b/04 Audio Signal Compression/audio_comp.ipynb
@@ -90,12 +90,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8e68e15f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: ipympl in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (0.9.7)\n",
+      "Requirement already satisfied: librosa in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (0.11.0)\n",
+      "Requirement already satisfied: ffmpeg-python in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (0.2.0)\n",
+      "Requirement already satisfied: ipython<10 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from ipympl) (8.32.0)\n",
+      "Requirement already satisfied: ipywidgets<9,>=7.6.0 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from ipympl) (8.1.5)\n",
+      "Requirement already satisfied: matplotlib<4,>=3.5.0 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from ipympl) (3.10.0)\n",
+      "Requirement already satisfied: numpy in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from ipympl) (2.1.3)\n",
+      "Requirement already satisfied: pillow in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from ipympl) (11.1.0)\n",
+      "Requirement already satisfied: traitlets<6 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from ipympl) (5.14.3)\n",
+      "Requirement already satisfied: audioread>=2.1.9 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from librosa) (3.0.1)\n",
+      "Requirement already satisfied: numba>=0.51.0 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from librosa) (0.61.0)\n",
+      "Requirement already satisfied: scipy>=1.6.0 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from librosa) (1.15.2)\n",
+      "Requirement already satisfied: scikit-learn>=1.1.0 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from librosa) (1.6.1)\n",
+      "Requirement already satisfied: joblib>=1.0 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from librosa) (1.4.2)\n",
+      "Requirement already satisfied: decorator>=4.3.0 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from librosa) (5.1.1)\n",
+      "Requirement already satisfied: soundfile>=0.12.1 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from librosa) (0.13.1)\n",
+      "Requirement already satisfied: pooch>=1.1 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from librosa) (1.8.2)\n",
+      "Requirement already satisfied: soxr>=0.3.2 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from librosa) (0.5.0.post1)\n",
+      "Requirement already satisfied: typing_extensions>=4.1.1 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from librosa) (4.12.2)\n",
+      "Requirement already satisfied: lazy_loader>=0.1 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from librosa) (0.4)\n",
+      "Requirement already satisfied: msgpack>=1.0 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from librosa) (1.1.0)\n",
+      "Requirement already satisfied: standard-aifc in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from librosa) (3.13.0)\n",
+      "Requirement already satisfied: standard-sunau in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from librosa) (3.13.0)\n",
+      "Requirement already satisfied: future in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from ffmpeg-python) (1.0.0)\n",
+      "Requirement already satisfied: jedi>=0.16 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from ipython<10->ipympl) (0.19.2)\n",
+      "Requirement already satisfied: matplotlib-inline in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from ipython<10->ipympl) (0.1.7)\n",
+      "Requirement already satisfied: pexpect>4.3 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from ipython<10->ipympl) (4.9.0)\n",
+      "Requirement already satisfied: prompt_toolkit<3.1.0,>=3.0.41 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from ipython<10->ipympl) (3.0.50)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from ipython<10->ipympl) (2.19.1)\n",
+      "Requirement already satisfied: stack_data in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from ipython<10->ipympl) (0.6.3)\n",
+      "Requirement already satisfied: comm>=0.1.3 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from ipywidgets<9,>=7.6.0->ipympl) (0.2.2)\n",
+      "Requirement already satisfied: widgetsnbextension~=4.0.12 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from ipywidgets<9,>=7.6.0->ipympl) (4.0.13)\n",
+      "Requirement already satisfied: jupyterlab-widgets~=3.0.12 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from ipywidgets<9,>=7.6.0->ipympl) (3.0.13)\n",
+      "Requirement already satisfied: packaging in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from lazy_loader>=0.1->librosa) (24.2)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from matplotlib<4,>=3.5.0->ipympl) (1.3.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from matplotlib<4,>=3.5.0->ipympl) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from matplotlib<4,>=3.5.0->ipympl) (4.56.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from matplotlib<4,>=3.5.0->ipympl) (1.4.8)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from matplotlib<4,>=3.5.0->ipympl) (3.2.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from matplotlib<4,>=3.5.0->ipympl) (2.9.0.post0)\n",
+      "Requirement already satisfied: llvmlite<0.45,>=0.44.0dev0 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from numba>=0.51.0->librosa) (0.44.0)\n",
+      "Requirement already satisfied: platformdirs>=2.5.0 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from pooch>=1.1->librosa) (4.3.6)\n",
+      "Requirement already satisfied: requests>=2.19.0 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from pooch>=1.1->librosa) (2.32.3)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from scikit-learn>=1.1.0->librosa) (3.5.0)\n",
+      "Requirement already satisfied: cffi>=1.0 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from soundfile>=0.12.1->librosa) (1.17.1)\n",
+      "Requirement already satisfied: standard-chunk in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from standard-aifc->librosa) (3.13.0)\n",
+      "Requirement already satisfied: audioop-lts in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from standard-aifc->librosa) (0.2.1)\n",
+      "Requirement already satisfied: pycparser in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from cffi>=1.0->soundfile>=0.12.1->librosa) (2.22)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.4 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from jedi>=0.16->ipython<10->ipympl) (0.8.4)\n",
+      "Requirement already satisfied: ptyprocess>=0.5 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from pexpect>4.3->ipython<10->ipympl) (0.7.0)\n",
+      "Requirement already satisfied: wcwidth in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from prompt_toolkit<3.1.0,>=3.0.41->ipython<10->ipympl) (0.2.13)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from python-dateutil>=2.7->matplotlib<4,>=3.5.0->ipympl) (1.17.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from requests>=2.19.0->pooch>=1.1->librosa) (3.4.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from requests>=2.19.0->pooch>=1.1->librosa) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from requests>=2.19.0->pooch>=1.1->librosa) (2.3.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (from requests>=2.19.0->pooch>=1.1->librosa) (2024.8.30)\n",
+      "Requirement already satisfied: executing>=1.2.0 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from stack_data->ipython<10->ipympl) (2.2.0)\n",
+      "Requirement already satisfied: asttokens>=2.1.0 in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from stack_data->ipython<10->ipympl) (3.0.0)\n",
+      "Requirement already satisfied: pure-eval in /Users/miklesz/Library/Python/3.13/lib/python/site-packages (from stack_data->ipython<10->ipympl) (0.2.3)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "pip install --upgrade ipympl librosa"
+    "pip install --upgrade ipympl librosa ffmpeg-python"
    ]
   },
   {
