--- a/10-11 (01-02) Image Processing Software/2 Image Processing Software - Tasks.ipynb
+++ b/10-11 (01-02) Image Processing Software/2 Image Processing Software - Tasks.ipynb
@@ -11,9 +11,7 @@
    "source": [
     "# Image Processing Software - Tasks\n",
     "\n",
-    "_Mikołaj Leszczuk_\n",
-    "\n",
-    "_Updated by Andres Vejar_\n",
+    "_Mikołaj Leszczuk_, _Andres Vejar_\n",
     "<!--![](https://i.creativecommons.org/l/by/4.0/88x31.png)-->"
    ]
   },
@@ -220,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
